--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover" />
-  <title>XXXXXXX</title>
+  <title>Skip the safety manual and come play with me 🎉😄👫💕</title>
 <style>
 body {
     font-family: Arial, sans-serif;
@@ -63,7 +63,7 @@ video {
 </head>
 <body>
 
-<div class="video-title">XXXXXXX</div>
+<div class="video-title">Skip the safety manual and come play with me 🎉😄👫💕</div>
 
 <div class="video-wrapper">
 
@@ -79,9 +79,8 @@ atOptions = {
 </script>
 <script type="text/javascript" src="https://beginshello.com/281ad8525430aef7936dbd51dbb2cc46/invoke.js"></script>
     </div>
-        <video autoplay loop playsinline controls poster="https://cdn.aceimg.com/8116d8c57.jpg">
-        <source src="https://cdn.videy.co/2XkdwCZz1.mp4" type="video/mp4">
-        Browser kamu tidak mendukung video.
+        <video autoplay loop playsinline controls poster="https://cdn.aceimg.com/a5d727667.jpg">
+        <source src="https://cdn.videy.co/c9USpcAp1.mp4" type="video/mp4">
     </video> 
    </div>
 
